added error response to spec and some error handling in the demo app
